--- a/package.json
+++ b/package.json
@@ -21,17 +21,30 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/bull": "^0.1.0",
+    "@nestjs/common": "^7.0.3",
+    "@nestjs/core": "^7.0.3",
+    "@nestjs/platform-express": "^7.0.3",
+    "@nestjs/platform-socket.io": "^7.0.3",
+    "@nestjs/testing": "^7.0.3",
+    "@nestjs/websockets": "^7.0.3",
+    "@types/socket.io-client": "^1.4.33",
+    "base-58": "0.0.1",
+    "base64url": "^3.0.1",
+    "bull": "^3.14.0",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
+    "did-resolver": "^1.1.0",
+    "hbs": "^4.1.1",
+    "jose": "^1.27.0",
+    "key-encoder": "^2.0.3",
+    "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.5",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
     "@types/node": "^13.9.1",
