--- a/src/did-auth/package.json
+++ b/src/did-auth/package.json
@@ -59,9 +59,10 @@
     "axios": "^0.19.2",
     "did-jwt": "^4.3.2",
     "did-resolver": "^1.1.0",
-    "ebsi-did-resolver": "0.0.3",
     "elliptic": "^6.5.2",
     "ethers": "^4.0.47",
+    "i": "^0.3.6",
+    "npm": "^6.14.5",
     "uuid": "^7.0.3"
   }
 }
