--- a/packages/identity-consent/package.json
+++ b/packages/identity-consent/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/bull": "^0.1.0",
+    "@nestjs/cli": "^7.2.0",
     "@nestjs/common": "^7.0.3",
     "@nestjs/core": "^7.0.3",
     "@nestjs/platform-express": "^7.0.3",
