--- a/packages/identity-consent/docker-compose.yml
+++ b/packages/identity-consent/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   identity-consent-api:
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
     image: vidchain/identity-consent-api:v0.1
     container_name: identity-consent-api
     restart: always
@@ -20,3 +20,5 @@ services:
 
 networks:
   hydra_network:
+    driver: bridge
+    name: hydra_oidc_network
