--- a/packages/hydra/hydra-dev.yml
+++ b/packages/hydra/hydra-dev.yml
@@ -36,16 +36,16 @@ services:
       migrate sql -e --yes
     restart: on-failure
 
-  postgresd:
-    image: postgres:9.6
-    ports:
-      - "5432:5432"
-    networks:
-      - hydra_network
-    environment:
-      - POSTGRES_USER=hydra
-      - POSTGRES_PASSWORD=secret
-      - POSTGRES_DB=hydra
+  # postgresd:
+  #   image: postgres:9.6
+  #   ports:
+  #     - "5432:5432"
+  #   networks:
+  #     - hydra_network
+  #   environment:
+  #     - POSTGRES_USER=hydra
+  #     - POSTGRES_PASSWORD=secret
+  #     - POSTGRES_DB=hydra
 
 networks:
   hydra_network:
