--- a/packages/identity-consent/docker-compose.yml
+++ b/packages/identity-consent/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       dockerfile: Dockerfile
     image: vidchain/identity-consent-api:v0.1
     container_name: identity-consent-api
+    depends_on:
+      - redis
     restart: always
     logging:
       options:
@@ -17,6 +19,20 @@ services:
       - 3000:3000
     networks:
       - hydra_network
+    environment:
+      - REDIS_URL=redis
+  
+  redis:
+    image: redis:latest
+    container_name: redis
+    volumes:
+       - ./redis.conf:/usr/local/etc/redis/redis.conf
+    ports:
+      - 6379:6379
+    networks:
+      - hydra_network
+  
+ 
 
 networks:
   hydra_network:
