--- a/packages/identity-consent/package.json
+++ b/packages/identity-consent/package.json
@@ -21,7 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/bull": "^0.1.0",
+    "@nestjs/bull": "^0.1.1",
     "@nestjs/cli": "^7.2.0",
     "@nestjs/common": "^7.0.3",
     "@nestjs/core": "^7.0.3",
@@ -49,6 +49,7 @@
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
+    "@types/bull": "^3.13.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
     "@types/node": "^13.9.1",
