--- a/packages/hydra/hydra-prod.yml
+++ b/packages/hydra/hydra-prod.yml
@@ -13,7 +13,7 @@ services:
     networks:
       - hydra_network
     command:
-      serve all
+      serve all --dangerous-force-http
     environment:
       - URLS_SELF_ISSUER=https://dev.api.vidchain.net
       - URLS_CONSENT=https://dev.api.vidchain.net/consent
