--- a/packages/identity-consent/docker-compose.yml
+++ b/packages/identity-consent/docker-compose.yml
@@ -21,6 +21,10 @@ services:
       - hydra_network
     environment:
       - REDIS_URL=redis
+      - BASE_URL=https://dev.api.vidchain.net
+      - PORT=3000
+      - REDIS_PORT=6379
+      - HYDRA_URL=http://hydra:4445
   
   redis:
     image: redis:latest
