--- a/packages/identity-consent/package.json
+++ b/packages/identity-consent/package.json
@@ -38,6 +38,7 @@
     "csurf": "^1.11.0",
     "did-jwt": "^4.3.2",
     "did-resolver": "^1.1.0",
+    "dotenv": "^8.2.0",
     "ethers": "^4.0.47",
     "hbs": "^4.1.1",
     "jose": "^1.27.0",
