--- a/packages/hydra/hydra-dev.yml
+++ b/packages/hydra/hydra-dev.yml
@@ -20,6 +20,9 @@ services:
       - URLS_LOGIN=http://127.0.0.1:3000/login
       - URLS_LOGOUT=http://127.0.0.1:3000/logout
       - HYDRA_ADMIN_URL=http://127.0.0.1:4445
+      - CORS_ENABLED=true
+      - CORS_ALLOWED_ORIGINS=*
+      - CORS_DEBUG=true
       # - HTTPS_ALLOW_TERMINATION_FROM=127.0.0.0/3000,127.0.0.0/3022
       # - OAUTH2_ERROR_URL. This URL can be used to provide an endpoint which will receive error messages from ORY Hydra that should be displayed to the end user.
       - DSN=postgres://hydra:secret@postgresd:5432/hydra?sslmode=disable&max_conns=20&max_idle_conns=4
