--- a/packages/hydra/hydra-prod.yml
+++ b/packages/hydra/hydra-prod.yml
@@ -22,6 +22,7 @@ services:
       # - OAUTH2_ERROR_URL. This URL can be used to provide an endpoint which will receive error messages from ORY Hydra that should be displayed to the end user.
       - DSN=postgres://hydra:secret@postgresd:5432/hydra?sslmode=disable&max_conns=20&max_idle_conns=4
       - SECRETS_SYSTEM=T68zLmRJonSNbRUWRlqOFFJWBLXU7yrn
+      - CORS_ENABLED=true
       - CORS_ALLOWED_ORIGINS=*
       - CORS_DEBUG=true
     restart: unless-stopped
