--- a/packages/identity-consent/docker-compose.yml
+++ b/packages/identity-consent/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - BASE_URL=https://dev.api.vidchain.net
       - PORT=3000
       - REDIS_PORT=6379
-      - HYDRA_URL=https://dev.api.vidchain.net
+      - HYDRA_URL=http://hydra:4445
   
   redis:
     image: redis:latest
