add flag in the consent docker

--- a/packages/hydra/hydra-prod.yml
+++ b/packages/hydra/hydra-prod.yml
@@ -16,9 +16,9 @@ services:
       serve all
     environment:
       - URLS_SELF_ISSUER=https://dev.api.vidchain.net
-      - URLS_CONSENT=http://identity-consent-api:3000/consent
-      - URLS_LOGIN=http://identity-consent-api:3000/login
-      - URLS_LOGOUT=http://identity-consent-api:3000/logout
+      - URLS_CONSENT=https://dev.api.vidchain.net/consent
+      - URLS_LOGIN=https://dev.api.vidchain.net/login
+      - URLS_LOGOUT=https://dev.api.vidchain.net/logout
       - SERVE_COOKIES_SAME_SITE_MODE=Lax
       # - OAUTH2_ERROR_URL. This URL can be used to provide an endpoint which will receive error messages from ORY Hydra that should be displayed to the end user.
       - DSN=postgres://hydra:secret@postgresd:5432/hydra?sslmode=disable&max_conns=20&max_idle_conns=4
