--- a/packages/hydra/k8s.yml
+++ b/packages/hydra/k8s.yml
@@ -18,7 +18,7 @@ spec:
       - name: hydra
         image: oryd/hydra:latest
         command: ["hydra"]
-        args: ["serve", "all", "--dangerous-force-http"]
+        args: ["serve", "all"]
         ports:
         - containerPort: 4444
         - containerPort: 4445
@@ -48,6 +48,10 @@ spec:
           - name: CORS_ALLOWED_ORIGINS
             value: "*"
           - name: CORS_DEBUG
+            value: "true"
+          - name: HTTPS_ALLOW_TERMINATION_FROM
+            value: "10.0.0.0/8"
+
 ---
 
 apiVersion: batch/v1
@@ -99,6 +103,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    nginx.ingress.kubernetes.io/auth-proxy-set-headers: custom-headers
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   tls:
@@ -117,3 +123,13 @@ spec:
         backend:
           serviceName: hydra
           servicePort: 9001
+
+--- 
+
+apiVersion: v1
+data:
+  X-Forwarded-Proto: "https"
+kind: ConfigMap
+metadata:
+  name: custom-headers
+  namespace: development
