--- a/packages/identity-consent/k8s.yml
+++ b/packages/identity-consent/k8s.yml
@@ -33,8 +33,8 @@ spec:
           value: "6379"
         - name: HYDRA_URL
           value: http://hydra:9001
-        - name: NODE_TLS_REJECT_UNAUTHORIZED
-          value: "0"
+        - name: MOCK_TLS_TERMINATION
+          value: "true"
       restartPolicy: Always
 ---
 
