--- a/packages/identity-consent/k8s.yml
+++ b/packages/identity-consent/k8s.yml
@@ -6,6 +6,7 @@ metadata:
     app: identity-consent-api
 spec:
   replicas: 1
+  revisionHistoryLimit: 1
   selector:
     matchLabels:
       app: identity-consent-api
