--- a/postgres.yml
+++ b/postgres.yml
@@ -9,6 +9,7 @@ spec:
     matchLabels:
       app: postgres
   replicas: 1
+  revisionHistoryLimit: 1
   template:
     metadata:
       labels:
@@ -21,13 +22,19 @@ spec:
         - containerPort: 5432
         env:
           - name: POSTGRES_DB
-            value: hydra
+            valueFrom:
+              secretKeyRef:
+                name: postgres
+                key: db
           - name: POSTGRES_USER
-            value: hydra
+            valueFrom:
+              secretKeyRef:
+                name: postgres
+                key: user
           - name: POSTGRES_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: postgress-password
+                name: postgres
                 key: password
 ---
 
