--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- ci/cd-azure-pipeline-aks
+- kubernetes-deployment
 
 resources:
 - repo: self
