add checkFiles to pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,17 +33,55 @@ variables:
   tag: $(Build.BuildNumber)
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
+  # Check if there are changes of the following files
+  checkFiles: '("packages/identity-consent/src" "packages/identity-consent/public" "packages/identity-consent/views" "packages/identity-consent/package.json" "packages/identity-consent/package-lock.json")'
 
 name: $(major).$(minor)$(Rev:.r)-$(Build.SourceBranchName)
 
 stages:
-- stage: Build
-  displayName: 'Build stage'
-  jobs:  
-  - job: BuildIdentityConsent
-    displayName: 'Build identity-consent'
+- stage: 'Build'
+  jobs:
+  - job: CheckChanges
+    displayName: 'Checking if there are changes in identity-consent'
     pool:
       vmImage: $(vmImageName)
+    steps:
+    - bash: |
+        declare -a files=$(checkFiles)
+        echo "This script detects if there's any change in:"
+        for f in "${files[@]}"
+        do
+            echo ">>> $f"
+        done
+        echo "********** CHANGES **********"
+        CHANGED_FILES=$(git diff HEAD HEAD~ --name-only)
+        BUILD_REQUIRED=false
+        for f in "${files[@]}" 
+        do 
+            for FILE in $CHANGED_FILES
+            do
+            if [[ $FILE == *$f* ]]; then
+                echo ">>> $FILE >>> CHANGED"
+                BUILD_REQUIRED=true
+                break
+            fi
+            done
+        done
+        if [ $BUILD_REQUIRED = true ]; then
+            echo "Build required."
+            echo "##vso[task.setvariable variable=SOURCE_CODE_CHANGED;isOutput=true]true"
+        else
+            echo "There are no changes that require building a new image."
+            echo "##vso[task.setvariable variable=SOURCE_CODE_CHANGED;isOutput=true]false"
+        fi
+      name: check_changes
+      displayName: 'Check changed files in wallet-api'
+  - job: Build       
+    displayName: 'Build wallet-api'
+    pool:
+      vmImage: $(vmImageName)    
+    dependsOn: CheckChanges      
+    condition: eq(dependencies.CheckChanges.outputs['check_changes.SOURCE_CODE_CHANGED'], 'true')
     steps:
     - task: Docker@2
       displayName: Build and push identity-consent image to container registry
