--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,7 @@ stages:
             echo "##vso[task.setvariable variable=SOURCE_CODE_CHANGED;isOutput=true]false"
         fi
       name: check_changes
-      displayName: 'Check changed files in wallet-api'
+      displayName: 'Check changed files in identity-consent'
   - job: Build       
     displayName: 'Build identity-consent'
     pool:
