--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -107,6 +107,15 @@ stages:
         deploy:
           steps:
           - checkout: self
+          - task: Kubernetes@1
+            displayName: Configuring configmap
+            inputs:
+              connectionType: Azure Resource Manager
+              azureSubscriptionEndpoint: $(azureSubscriptionEndpoint) 
+              azureResourceGroup: $(azureResourceGroup)
+              kubernetesCluster: $(kubernetesCluster)
+              command: apply
+              arguments: -f dev-configmap.yml -n $(namespace)
           ## Since the deployment is already available in the cluster
           - task: Kubernetes@1
             displayName: kubectl set image for identity-consent
@@ -115,8 +124,6 @@ stages:
               azureSubscriptionEndpoint: $(azureSubscriptionEndpoint) 
               azureResourceGroup: $(azureResourceGroup)
               kubernetesCluster: $(kubernetesCluster)
-              useConfigMapFile: true
-              configMapFile: dev-configmap.yml
               command: set
               arguments: image $(deployment) $(Repo)=$(RepoEndpoint):$(tag) -n $(namespace)
           ## Otherwise, use code below to create a new deployment 
