--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -107,6 +107,14 @@ stages:
         deploy:
           steps:
           - checkout: self
+          - task: KubernetesManifest@0
+          displayName: Deploy
+          inputs:              
+            kubernetesServiceConnection: $(kubernetesServiceConnection)
+            namespace: $(namespace)
+            manifests: packages/identity-consent/k8s.yml
+            containers: |
+              $(RepoEndpoint):$(tag)
           - task: Kubernetes@1
             displayName: Configuring configmap
             inputs:
@@ -117,15 +125,15 @@ stages:
               command: apply
               arguments: -f dev-configmap.yml -n $(namespace)
           ## Since the deployment is already available in the cluster
-          - task: Kubernetes@1
-            displayName: kubectl set image for identity-consent
-            inputs:
-              connectionType: Azure Resource Manager
-              azureSubscriptionEndpoint: $(azureSubscriptionEndpoint) 
-              azureResourceGroup: $(azureResourceGroup)
-              kubernetesCluster: $(kubernetesCluster)
-              command: set
-              arguments: image $(deployment) $(Repo)=$(RepoEndpoint):$(tag) -n $(namespace)
+          #- task: Kubernetes@1
+          #  displayName: kubectl set image for identity-consent
+          #  inputs:
+          #    connectionType: Azure Resource Manager
+          #    azureSubscriptionEndpoint: $(azureSubscriptionEndpoint) 
+          #    azureResourceGroup: $(azureResourceGroup)
+          #    kubernetesCluster: $(kubernetesCluster)
+          #    command: set
+          #    arguments: image $(deployment) $(Repo)=$(RepoEndpoint):$(tag) -n $(namespace)
           ## Otherwise, use code below to create a new deployment 
           #- task: Kubernetes@1
           #  displayName: kubectl apply for identity-consent
