--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -107,16 +107,8 @@ stages:
         deploy:
           steps:
           - checkout: self
-          - task: KubernetesManifest@0
-            displayName: Deploy K8s manifest
-            inputs:              
-              kubernetesServiceConnection: $(kubernetesServiceConnection)
-              namespace: $(namespace)
-              manifests: packages/identity-consent/k8s.yml
-              containers: |
-                $(RepoEndpoint):$(tag)
           - task: Kubernetes@1
-            displayName: Configuring configmap
+            displayName: Create/update configmap
             inputs:
               connectionType: Azure Resource Manager
               azureSubscriptionEndpoint: $(azureSubscriptionEndpoint) 
@@ -124,6 +116,14 @@ stages:
               kubernetesCluster: $(kubernetesCluster)
               command: apply
               arguments: -f dev-configmap.yml -n $(namespace)
+          - task: KubernetesManifest@0
+            displayName: Create/update deployment
+            inputs:              
+              kubernetesServiceConnection: $(kubernetesServiceConnection)
+              namespace: $(namespace)
+              manifests: packages/identity-consent/k8s.yml
+              containers: |
+                $(RepoEndpoint):$(tag)
           ## Since the deployment is already available in the cluster
           #- task: Kubernetes@1
           #  displayName: kubectl set image for identity-consent
