--- a/dev-configmap.yml
+++ b/dev-configmap.yml
@@ -3,10 +3,9 @@ kind: ConfigMap
 metadata:
   name: dev-identity-provider-configmap
 data:
-  test: "hello"
-  #REDIS_URL: "redis"
-  #BASE_URL: "https://dev.vidchain.net"
-  #PORT: "3000"
-  #REDIS_PORT: "6379"
-  #HYDRA_URL: "http://hydra:9001"
-  #MOCK_TLS_TERMINATION: "true"
+  REDIS_URL: "redis"
+  BASE_URL: "https://dev.vidchain.net"
+  PORT: "3000"
+  REDIS_PORT: "6379"
+  HYDRA_URL: "http://hydra:9001"
+  MOCK_TLS_TERMINATION: "true"
