--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,11 +29,20 @@ variables:
   # Check if there are changes of the following files
   checkFiles: '("azure-pipelines.yml" "dev-configmap.yml" "packages/identity-consent/k8s.yml" "packages/identity-consent/src" "packages/identity-consent/public" "packages/identity-consent/views" "packages/identity-consent/package.json" "packages/identity-consent/package-lock.json")'
 
-name: $(major).$(minor)$(Rev:.r)-$(Build.SourceBranchName)
-
 stages:
 - stage: 'Build'
   jobs:
+  - job: GetPackageVersion
+    displayName: 'Retrieve package.json version to update build number'
+    steps:
+      - task: NodeTool@0
+        inputs:
+          versionSpec: '12.x'
+        displayName: 'Use node'
+      - script: |
+          npmVersionString=$(node -p "require('packages/identity-consent/package.json').version")
+          echo "##vso[build.updatebuildnumber]$npmVersionString-commit.$(Build.SourceVersion)"
+        displayName: 'retrieve packages/identity-consent/package.json version'
   - job: CheckChanges
     displayName: 'Checking if there are changes in identity-consent'
     pool:
