--- a/azure-pipelines/azure-pipelines-pro.yml
+++ b/azure-pipelines/azure-pipelines-pro.yml
@@ -3,7 +3,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- kubernetes-deployment
+- main
 
 resources:
 - repo: self
@@ -23,13 +23,13 @@ variables:
   # package.json
   packageJson: 'packages/identity-consent/package.json'
   # Kubernetes namespace
-  namespace: 'development'
+  namespace: 'production'
   # Image tagging: application version - build
   tag: $(Build.BuildNumber)
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
   # Check if there are changes of the following files
-  checkFiles: '("azure-pipelines.yml" "dev-configmap.yml" "packages/identity-consent/k8s.yml" "packages/identity-consent/src" "packages/identity-consent/public" "packages/identity-consent/views" "packages/identity-consent/package.json" "packages/identity-consent/package-lock.json")'
+  checkFiles: '("azure-pipelines/azure-pipelines.yml" "dev-configmap.yml" "packages/identity-consent/k8s.yml" "packages/identity-consent/src" "packages/identity-consent/public" "packages/identity-consent/views" "packages/identity-consent/package.json" "packages/identity-consent/package-lock.json")'
 
 stages:
 - stage: 'Build'
