trigger branches include

--- a/azure-pipelines/azure-pipelines-dev.yml
+++ b/azure-pipelines/azure-pipelines-dev.yml
@@ -3,7 +3,9 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- development
+  branches:
+    include:
+      - development
 
 resources:
 - repo: self
