redis azure for pro - redis container for dev

--- a/azure-pipelines/azure-pipelines-pro.yml
+++ b/azure-pipelines/azure-pipelines-pro.yml
@@ -15,13 +15,13 @@ variables:
   DOCKER_BUILDKIT: 1
   # Image repository
   Repo: 'identity-consent-api'
-  RepoEndpoint: 'k8scrvidchaindev.azurecr.io/identity-consent-api'
+  RepoEndpoint: 'k8scrvidchainpro.azurecr.io/identity-consent-api'
   # Dockerfile
   Dockerfile: 'packages/identity-consent/Dockerfile'
   # Kubernetes YAML
   k8s: 'packages/identity-consent/k8s.yml'
   # Configmaps
-  configMap: 'packages/identity-consent/dev-configmap.yml'
+  configMap: 'packages/identity-consent/configmap-pro.yml'
   # package.json
   packageJson: 'packages/identity-consent/package.json'
   # Kubernetes namespace
@@ -31,7 +31,7 @@ variables:
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
   # Check if there are changes of the following files
-  checkFiles: '("azure-pipelines/azure-pipelines.yml" "dev-configmap.yml" "packages/identity-consent/k8s.yml" "packages/identity-consent/src" "packages/identity-consent/public" "packages/identity-consent/views" "packages/identity-consent/package.json" "packages/identity-consent/package-lock.json")'
+  checkFiles: '("azure-pipelines/azure-pipelines-pro.yml" "configmap-pro.yml" "packages/identity-consent/k8s.yml" "packages/identity-consent/src" "packages/identity-consent/public" "packages/identity-consent/views" "packages/identity-consent/package.json" "packages/identity-consent/package-lock.json")'
 
 stages:
 - stage: 'Build'
