--- a/azure-pipelines/azure-pipelines-pro.yml
+++ b/azure-pipelines/azure-pipelines-pro.yml
@@ -31,7 +31,7 @@ variables:
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
   # Check if there are changes of the following files
-  checkFiles: '("azure-pipelines/azure-pipelines-pro.yml" "configmap-pro.yml" "packages/identity-consent/k8s.yml" "packages/identity-consent/src" "packages/identity-consent/public" "packages/identity-consent/views" "packages/identity-consent/package.json" "packages/identity-consent/package-lock.json")'
+  checkFiles: '("azure-pipelines/azure-pipelines-pro.yml" "$(configMap)" "packages/identity-consent/k8s.yml" "packages/identity-consent/src" "packages/identity-consent/public" "packages/identity-consent/views" "packages/identity-consent/package.json" "packages/identity-consent/package-lock.json")'
 
 stages:
 - stage: 'Build'
