--- a/packages/identity-consent/k8s.yml
+++ b/packages/identity-consent/k8s.yml
@@ -21,7 +21,7 @@ spec:
         app: identity-consent-api
     spec:
       containers:
-      - image: k8scrvidchaindev.azurecr.io/identity-consent-api:v1.0
+      - image: k8scrvidchaindev.azurecr.io/identity-consent-api:latest
         imagePullPolicy: "Always"
         name: identity-consent-api
         ports:
