--- a/packages/identity-consent/k8s/configmap-dev.yml
+++ b/packages/identity-consent/k8s/configmap-dev.yml
@@ -3,8 +3,9 @@ kind: ConfigMap
 metadata:
   name: identity-provider-configmap
 data:
-  BASE_URL: "https://api.vidchain.net"
+  REDIS_URL: "redis"
+  BASE_URL: "https://dev.vidchain.net"
   PORT: "3000"
-  REDIS_PORT: "6380"
+  REDIS_PORT: "6379"
   HYDRA_URL: "http://hydra:9001"
   MOCK_TLS_TERMINATION: "true"
