--- a/packages/identity-consent/k8s/k8s-dev.yml
+++ b/packages/identity-consent/k8s/k8s-dev.yml
@@ -29,9 +29,9 @@ spec:
         env:
         - name: REDIS_URL
           valueFrom:
-            secretKeyRef:
-              name: redis
-              key: redis-url
+            configMapKeyRef:
+              name: identity-provider-configmap
+              key: REDIS_URL
         - name: BASE_URL
           valueFrom:
             configMapKeyRef:
