--- a/azure-pipelines/azure-pipelines-pro.yml
+++ b/azure-pipelines/azure-pipelines-pro.yml
@@ -1,11 +1,9 @@
-# Deploy to Azure Kubernetes Service
-# Build and push image to Azure Container Registry; Deploy to Azure Kubernetes Service
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
   branches:
     include:
       - main
+
+pr: none
 
 resources:
 - repo: self
@@ -19,9 +17,9 @@ variables:
   # Dockerfile
   Dockerfile: 'packages/identity-consent/Dockerfile'
   # Kubernetes YAML
-  k8s: 'packages/identity-consent/k8s.yml'
+  k8s: 'packages/identity-consent/k8s/k8s-pro.yml'
   # Configmaps
-  configMap: 'packages/identity-consent/configmap-pro.yml'
+  configMap: 'packages/identity-consent/k8s/configmap-pro.yml'
   # package.json
   packageJson: 'packages/identity-consent/package.json'
   # Kubernetes namespace
@@ -31,7 +29,7 @@ variables:
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
   # Check if there are changes of the following files
-  checkFiles: '("azure-pipelines/azure-pipelines-pro.yml" "$(configMap)" "packages/identity-consent/k8s.yml" "packages/identity-consent/src" "packages/identity-consent/public" "packages/identity-consent/views" "packages/identity-consent/package.json" "packages/identity-consent/package-lock.json")'
+  checkFiles: '("azure-pipelines/azure-pipelines-pro.yml" "$(configMap)" "$(k8s)" "packages/identity-consent/src" "packages/identity-consent/public" "packages/identity-consent/views" "packages/identity-consent/package.json" "packages/identity-consent/package-lock.json")'
 
 stages:
 - stage: 'Build'
@@ -130,7 +128,7 @@ stages:
     condition: eq(stageDependencies.Build.CheckChanges.outputs['check_changes.SOURCE_CODE_CHANGED'], 'true')
     pool:
       vmImage: $(vmImageName)
-    environment: 'development'
+    environment: 'production'
     strategy:
       runOnce:
         deploy:
