--- a/azure-pipelines/azure-pipelines-dev.yml
+++ b/azure-pipelines/azure-pipelines-dev.yml
@@ -50,7 +50,7 @@ stages:
           echo "##vso[build.updatebuildnumber]$npmVersionString-commit.$shortCommit"
         displayName: 'retrieve $(packageJson) version'
   - job: CheckChanges
-    displayName: 'Checking if there are changes in identity-consent'
+    displayName: 'Checking changes in identity-consent'
     pool:
       vmImage: $(vmImageName)
     steps:
