--- a/packages/identity-consent/k8s/k8s-dev.yml
+++ b/packages/identity-consent/k8s/k8s-dev.yml
@@ -87,7 +87,7 @@ spec:
   tls:
   - hosts:
     - dev.vidchain.net
-    secretName: tls-secret-production
+    secretName: tls-secret-development
   rules:
   - host: dev.vidchain.net
     http:
